Client: Sign up form

--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -1,5 +1,13 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
-.hello {
-  color: #ff0000;
+nav {
+  background-color: #283e4a;
+}
+#sign_up_form {
+  width: 600px;
+  background-color: #EDF0F3;
+
+  #sign_up_btn {
+    width: 100%;
+  }
 }
