--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -15,3 +15,14 @@ nav {
 .spinner {
   color: #007bff;
 }
+
+#confirm_email_form {
+  border: 2px solid #f2f2f2;
+  span {
+    color: #007bff;
+  }
+
+  button {
+    width: 80%;
+  }
+}
