--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -26,3 +26,12 @@ nav {
     width: 80%;
   }
 }
+
+.has-danger {
+  border: 1px solid red;
+}
+
+.has-danger:focus {
+  box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
+  border: 1px solid red;
+}
