Client. Sign in form in container

--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -12,6 +12,15 @@ nav {
   }
 }
 
+#sign_in_form_body {
+  width: 600px;
+  background-color: #EDF0F3;
+
+  button {
+    width: 100%;
+  }
+}
+
 .spinner {
   color: #007bff;
 }
