Client. Moderator. Navbar

--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -49,3 +49,19 @@ nav {
 .breadcrumb {
   background: none;
 }
+
+.wrapper {
+  .navbar {
+    background-color: #FFF;
+  }
+}
+
+#search-form {
+  input {
+    width: 350px;
+  }
+}
+
+.width120 {
+  width: 120px;
+}
