--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -65,3 +65,32 @@ nav {
 .width120 {
   width: 120px;
 }
+
+.divider {
+  height: 1px;
+  background-color: #EDF0F3;
+}
+
+.table-header {
+  background-color: #FFF;
+  font-weight: bold;
+  -webkit-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+  -moz-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+  box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+
+}
+
+section.table-body {
+  ul li {
+    background-color: #FFF;
+    margin-bottom: 12px;
+  }
+
+  ul li:hover {
+    -webkit-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+    -moz-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+    box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+  }
+}
+
+//1px solid hsla(280,9%,87%,.4)
