Client. Moderator. Table body is ready

--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -66,12 +66,8 @@ nav {
   width: 120px;
 }
 
-.divider {
-  height: 1px;
-  background-color: #EDF0F3;
-}
-
 .table-header {
+  border-top: 1px solid hsla(280,9%,87%,.4);
   background-color: #FFF;
   font-weight: bold;
   -webkit-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
@@ -90,7 +86,6 @@ section.table-body {
     -webkit-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
     -moz-box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
     box-shadow: 0px 2px 21px 0px rgba(219,218,222,1);
+    cursor: pointer;
   }
 }
-
-//1px solid hsla(280,9%,87%,.4)
