--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -93,3 +93,51 @@ section.table-body {
 footer nav {
   background-color: #F8F6F9;
 }
+
+.close {
+  position: relative;
+  display: inline-block;
+  width: 37px;
+  height: 37px;
+  overflow: hidden;
+  opacity: 1;
+
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  transition:         transform .5s ease-in-out;
+
+  &:hover {
+    cursor: pointer;
+
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+
+  }
+
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    margin-top: -1px;
+    background: #000;
+  }
+
+  &::before {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+}
