--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -150,7 +150,7 @@ footer nav {
 .dropbtn {
   background-color: #f8f9fa;
   color: black;
-  padding: 16px;
+  height: 100%;
   font-size: 16px;
   border: none;
 }
