--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -26,6 +26,10 @@ nav {
   color: #007bff;
 }
 
+.spinner-white {
+  color: #fff;
+}
+
 #confirm_email_form {
   border: 2px solid #f2f2f2;
   span {
