fixes in moderator page

--- a/client/style/styles.less
+++ b/client/style/styles.less
@@ -186,7 +186,36 @@ footer nav {
   display: block;
 }
 
+.warning {
+  background-color: #ffa73d !important;
+  color: white;
+}
 
+.valid {
+  background-color: #259117 !important;
+  color: white
+}
 
+.invalid {
+  background-color: #f7294c !important;
+  color: white;
+}
 
+div.vertical-center {
+  display: flex;
+  justify-content:center;
+  align-content:center;
+  flex-direction:column;
+}
+
+#table-body li {
+  border-radius: 25px;
+  -webkit-box-shadow: 2px 10px 17px -1px rgba(214,201,214,1);
+  -moz-box-shadow: 2px 10px 17px -1px rgba(214,201,214,1);
+  box-shadow: 2px 10px 17px -1px rgba(214,201,214,1);
+}
+
+.border-bottom-black {
+  border-bottom: 1px solid black;
+}
 /* END DROP DOWN FOR LANGUAGE CHECK */
